# qcurious-tester

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.curiositybench  PLAN.md  PLAN_v2.md  PLAN_v3.md  PLAN_v4.md  README.md  config.py  pyproject.toml  requirements.txt  run_ablation_diversity.py  run_ablation_s_matched.py  run_ablations.py  run_benchmark.py  run_blackbox.py  run_corridor_test.py  run_coverage_map_test.py  run_covmap_fair.py  run_covmap_qvalue.py  run_curiositybench.py  run_forked_test.py  run_head2head_v2.py  run_phase0b.py  run_phase0b_v3.py  run_qvalue_test.py  run_repo_explore_bench.py  run_testgeneval.py  test_gemini.py
curiosity_explorer/: __init__.py  llm.py
curiosity_explorer/analysis/: calibration.py  corridor_analysis.py  plotting.py
curiosity_explorer/benchmarks/: __init__.py  benchmark_runner.py  corridor_programs.py  function_generator.py  obfuscated_programs.py  repo_explore_bench.py  testgeneval_config.py  toy_programs.py
curiosity_explorer/explorer/: __init__.py  candidate_gen.py  coverage_exploration.py  curiosity_search.py  diverse_gen.py  entropy_utils.py  info_gain.py  parse_utils.py  q_values.py
curiosity_explorer/runner/: __init__.py  coverage.py  docker_coverage.py  sandbox.py  trace_parser.py
plots/: paper_ablations.py  paper_case_studies.py  paper_figures.py  plot_results.py
plots/paper/: appendix_bestexec.tex  appendix_case_study_scripts.tex  appendix_prompts.tex  table_ablations.tex  table_lines.tex  table_main.tex  (+2 more)
results/: FINDINGS.md
scripts/: download_results.py  hf_dataset_card.md  upload_results_to_hf.py
(+31 files in other folders)
